[chromium] Fix assertion failure in ThreadIdentifierData::identifier in TestShell. https://bugs.webkit.org/show_bug.cgi?id=65685

Reviewed by Dmitry Titov.

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::WebViewHost): Intialize WTF threading before
anything in WTF is used. Usually this is done by WebViewImpl::WebViewImpl
but in some cases code may use WTF without creating WebViewImpl and
WTF code functionality may call WTF::currentThread, which requires
this initialization now.


Canonical link: https://commits.webkit.org/81539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92420 268f45cc-cd09-0410-ab3c-d52691b4dbfc